--- a/config/database.yml
+++ b/config/database.yml
@@ -4,18 +4,26 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  enconding: utf-8
+  host: 127.0.0.1
+  database: sp-data
   pool: 5
+  username: <%= ENV['SP_POSTGRES_USER'] %>
+  password: <%= ENV['SP_POSTGRES_PASS'] %>
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  enconding: utf-8
+  host: 127.0.0.1
+  database: sp-data
   pool: 5
+  username: <%= ENV['SP_POSTGRES_USER'] %>
+  password: <%= ENV['SP_POSTGRES_PASS'] %>
   timeout: 5000
 
 production:
