--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,11 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  enconding: utf-8
+  host: 127.0.0.1
+  database: sp-data
   pool: 5
+  username: <%= ENV['SP_POSTGRES_USER'] %>
+  password: <%= ENV['SP_POSTGRES_PASS'] %>
   timeout: 5000
