--- a/config/database.yml
+++ b/config/database.yml
@@ -17,13 +17,9 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  enconding: utf-8
-  host: 127.0.0.1
-  database: sp-data
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
-  username: <%= ENV['SP_POSTGRES_USER'] %>
-  password: <%= ENV['SP_POSTGRES_PASS'] %>
   timeout: 5000
 
 production:
