--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,8 @@
 development:
   adapter: postgresql
   enconding: utf-8
-  host: 127.0.0.1
-  database: sp-data
+  host: <%= ENV['SP_POSTGRES_HOST'] %>
+  database: <%= ENV['SP_POSTGRES_DATABASE'] %>
   pool: 5
   username: <%= ENV['SP_POSTGRES_USER'] %>
   password: <%= ENV['SP_POSTGRES_PASS'] %>
@@ -25,8 +25,8 @@ test:
 production:
   adapter: postgresql
   enconding: utf-8
-  host: 127.0.0.1
-  database: sp-data
+  host: <%= ENV['SP_POSTGRES_HOST'] %>
+  database: <%= ENV['SP_POSTGRES_DATABASE'] %>
   pool: 5
   username: <%= ENV['SP_POSTGRES_USER'] %>
   password: <%= ENV['SP_POSTGRES_PASS'] %>
